2012-02-09  Paul Eggert  <eggert@cs.ucla.edu>

	Replace FSF snail mail address with URLs, as per GNU coding standards.
	Most of the snail mail addresses were wrong anyway, and omitting
	them makes the source code easier to maintain.  Almost all of the
	changes are to license notices and to locale LC_IDENTIFICATION
	addresses, except for this one:
	* manual/libc.texinfo: In "Published by", give the FSF's URL,
	not its snail mail address.

2012-02-09  Richard Henderson  <rth@twiddle.net>

	* sysdeps/unix/sysv/linux/internal_statvfs.c: Use <> for include
	of kernel-features.h.

	* elf/dl-tls.c (update_get_addr): Avoid pointer type mismatch warning.

2012-02-08  Marek Polacek  <polacek@redhat.com>

	* libio/libio.h: Remove _G_HAVE_SYS_CDEFS conditional.
	* sysdeps/mach/hurd/_G_config.h: Remove _G_HAVE_SYS_CDEFS macro.
	* sysdeps/gnu/_G_config.h: Likewise.
	* sysdeps/generic/_G_config.h: Likewise.

2012-02-08  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/i386/fpu/libm-test-ulps: Reduce ldouble ULPs for jn
	tests.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

	* sysdeps/powerpc/powerpc32/crti.S: New file.
	* sysdeps/powerpc/powerpc32/crtn.S: New file.
	* sysdeps/powerpc/powerpc64/crti.S: New file.
	* sysdeps/powerpc/powerpc64/crtn.S: New file.

	* Makeconfig (have-initfini): Don't set.
	* config.make.in (have-initfini, need-nopic-initfini): Don't set.
	* configure.in (nopic_initfini): Don't substitute.
	* config.h.in (HAVE_INITFINI): Don't #undef.
	* csu/Makefile (CPPFLAGS): Don't add -DHAVE_INITFINI.
	* csu/gmon-start.c: Assume HAVE_INITFINI is defined.

2012-02-08  Joseph Myers  <joseph@codesourcery.com>

	Support crti.S and crtn.S provided directly by architectures.
	* csu/Makefile [crti.S in sysdirs] (generated): Do not append.
	[crti.S in sysdirs] (omit-deps): Likewise.
	[crti.S in sysdirs] (CFLAGS-initfini.s): Do not define variable.
	[crti.S in sysdirs] ($(crtstuff:%=$(objpfx)%.o)): Disable rule.
	[crti.S in sysdirs] ($(objpfx)initfini.s): Likewise.