@@ -4,7 +4,7 @@ comment_char %
 LC_IDENTIFICATION
 title      "Greek locale for Greece with Euro"
 source     "Free Software Foundation, Inc."
-address    "http://www.gnu.org/software/libc/"
+address    "59 Temple Place - Suite 330, Boston, MA 02111-1307, USA"
 contact    ""
 email      "bug-glibc-locales@gnu.org"
 tel        ""
