@@ -15,7 +15,7 @@ comment_char    %
 LC_IDENTIFICATION
 title      "Finnish locale for Finland with Euro"
 source     "Free Software Foundation, Inc."
-address    "http://www.gnu.org/software/libc/"
+address    "59 Temple Place - Suite 330, Boston, MA 02111-1307, USA"
 contact    ""
 email      "bug-glibc-locales@gnu.org"
 tel        ""
